src/objects/PFLSFTMA__TMA_Transactions__c.object
<CustomObject>
    <fields>
        <fullName>PFLSFTMA__API_Key__c</fullName>
        <label>Store ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>TMA_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Campaign_Member__c</fullName>
        <label>Campaign Member</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Company_Name__c</fullName>
        <description>Denotes the account name if TMA order is for contact else lead&apos;s company</description>
        <formula>IF(PFLSFTMA__Contact__c != null , TRIM(LEFT(PFLSFTMA__Account__r.Name,  35)), TRIM(LEFT(PFLSFTMA__Lead__r.Company, 35)) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup for contact, if a TMA order is associated with a contact this field is populated.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>TMA Transactions</relationshipLabel>
        <relationshipName>TMA_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>TMA Transactions</relationshipLabel>
        <relationshipName>TMA_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Date_Delivered__c</fullName>
        <description>Date on which TMA is delivered</description>
        <label>Date Delivered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Date_Ordered_DateTime__c</fullName>
        <label>Touch Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Date_Ordered__c</fullName>
        <description>Date on which TMA was ordered</description>
        <label>Touch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Date_Shipped_DateTime__c</fullName>
        <label>Date Time Shipped</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Date_Shipped__c</fullName>
        <description>Date on which the TMA was shipped.</description>
        <label>Date Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Error_Message__c</fullName>
        <description>Used to capture customer facing error messages</description>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Gift_Id__c</fullName>
        <label>Gift Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Gift_Info__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+ Id, PFLSFTMA__TMA_Product__c ,&quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Touch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Gift_Sender_City__c</fullName>
        <label>Gift Sender City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Gift_Sender_Company__c</fullName>
        <label>Gift Sender Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Gift_Sender_Country__c</fullName>
        <label>Gift Sender Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Gift_Sender_Email__c</fullName>
        <label>Gift Sender Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Gift_Sender_First_Name__c</fullName>
        <label>Gift Sender First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Gift_Sender_Last_Name__c</fullName>
        <label>Gift Sender Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Gift_Sender_Phone__c</fullName>
        <label>Gift Sender Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Gift_Sender_Postal_Code__c</fullName>
        <label>Gift Sender Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Gift_Sender_State__c</fullName>
        <label>Gift Sender State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Gift_Sender_Street_Address__c</fullName>
        <label>Gift Sender Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Gift_Sender_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gift Sender User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TMA_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Internal_Error_Message__c</fullName>
        <label>Internal Error Message</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup for Lead, if a TMA order is associated with a lead this field is populated.</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>TMA Transactions</relationshipLabel>
        <relationshipName>TMA_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Number_TMA_Orders__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number TMA Orders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup for Opportunity, if a TMA order is associated with a opportunity this field is populated.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>TMA_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Order_Detail__c</fullName>
        <formula>IF( ISBLANK(PFLSFTMA__Tracking_URL__c ) ,  PFLSFTMA__Error_Message__c ,  HYPERLINK( PFLSFTMA__Tracking_URL__c , PFLSFTMA__Tracking_URL__c, &quot;_blank&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Order_Number__c</fullName>
        <description>TMA Order number  when a order is placed.</description>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Ordered_By_Me__c</fullName>
        <description>yes if ordered by current user logged in</description>
        <formula>IF( PFLSFTMA__Ordered_By__c = $User.Id ,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ordered By Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Ordered_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User lookup, denotes who has ordered the gift.</description>
        <label>Ordered By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TMA_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Reason__c</fullName>
        <description>Reason why the gift was sent.</description>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Recipient_City__c</fullName>
        <label>Recipient City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Recipient_Company__c</fullName>
        <label>Recipient Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Recipient_Country__c</fullName>
        <label>Recipient Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Recipient_Email__c</fullName>
        <label>Recipient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Recipient_First_Name__c</fullName>
        <label>Recipient First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Recipient_Last_Name__c</fullName>
        <label>Recipient Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Recipient_Phone__c</fullName>
        <label>Recipient Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Recipient_Postal_Code__c</fullName>
        <label>Recipient Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Recipient_State__c</fullName>
        <label>Recipient State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Recipient_Street_Address__c</fullName>
        <label>Recipient Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Recipient__c</fullName>
        <formula>IF( PFLSFTMA__Contact__r.Id &lt;&gt; null , HYPERLINK(&apos;/&apos;
+ PFLSFTMA__Contact__r.Id , PFLSFTMA__Contact__r.FirstName+&apos; &apos;+ PFLSFTMA__Contact__r.LastName, &quot;_top&quot; ) , HYPERLINK(&apos;/&apos;+ PFLSFTMA__Lead__r.Id ,PFLSFTMA__Lead__r.FirstName+&apos; &apos;+ PFLSFTMA__Lead__r.LastName, &quot;_top&quot; ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recipient</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__RuleID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RuleID</label>
        <referenceTo>PFLSFTMA__Rule__c</referenceTo>
        <relationshipLabel>TMA Transactions</relationshipLabel>
        <relationshipName>TMA_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Send_Mechanism__c</fullName>
        <description>To distinguish between Auto Send and Manual Send orders.</description>
        <label>Send Mechanism</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Signed_By__c</fullName>
        <description>Name of person , who signed while reciving order.</description>
        <label>Signed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__StatusFlag__c</fullName>
        <formula>IF( ( ISPICKVAL(PFLSFTMA__Status__c, &apos;Delivered&apos;) ||ISPICKVAL(PFLSFTMA__Status__c, &apos;Order Confirmed&apos;) ||ISPICKVAL(PFLSFTMA__Status__c, &apos;Shipped&apos;)),0 ,1 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>StatusFlag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Status__c</fullName>
        <description>Status of order placed.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Order Confirmed</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Unable to deliver</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PFLSFTMA__TMA_Product__c</fullName>
        <label>TMA Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__TaskID__c</fullName>
        <description>Id of task with which this order is associated</description>
        <label>Follow-up Task Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__TaskId_Failed__c</fullName>
        <description>Id of failed task with which this order is associated</description>
        <label>Failed Follow-up Task Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Total_Price__c</fullName>
        <description>Price of product selected</description>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Tracking_Link__c</fullName>
        <formula>HYPERLINK( PFLSFTMA__Tracking_URL__c , PFLSFTMA__Tracking_URL__c, &quot;_blank&quot;)</formula>
        <label>Tracking Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Tracking_Number__c</fullName>
        <description>Tracking number, when order is shipped.</description>
        <label>Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Tracking_URL__c</fullName>
        <description>static url for tracking link.</description>
        <label>Tracking URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Truncated_Fields__c</fullName>
        <label>Truncated Fields</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <label>TMA Transaction</label>
    <listViews>
        <fullName>PFLSFTMA__All</fullName>
        <columns>NAME</columns>
        <columns>PFLSFTMA__Recipient__c</columns>
        <columns>PFLSFTMA__TMA_Product__c</columns>
        <columns>PFLSFTMA__Reason__c</columns>
        <columns>PFLSFTMA__Status__c</columns>
        <columns>PFLSFTMA__Date_Ordered_DateTime__c</columns>
        <columns>PFLSFTMA__Date_Delivered__c</columns>
        <columns>PFLSFTMA__Date_Shipped_DateTime__c</columns>
        <columns>PFLSFTMA__Order_Detail__c</columns>
        <columns>PFLSFTMA__Recipient_First_Name__c</columns>
        <columns>PFLSFTMA__Recipient_Last_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TMA Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>